enitre meadow page + ui + some of the index page

--- a/public/index.html
+++ b/public/index.html
@@ -17,19 +17,20 @@
 
 <main>
 
-<h1><b>THE <abbr title="In Stars and Time">ISAT</abbr> SCRIPT</b></h1>
-<p>The reason for this website's creation. I shall attempt to make a full script of hit indie game <i><a href="https://store.steampowered.com/app/1677310/In_Stars_And_Time/">In Stars and Time</a>,</i> which everybody should play immediately.</p>
-<p>All (most) images used are taken from game files and hosted on <a href="https://instarsandtime.wiki.gg">The fantabulous <abbr title="In Stars and Time">ISAT</abbr>wiki!!!!</a></p>
+<h1><b><abbr title="イン・スターズ・アンド・タイム">ISAT</abbr>スクリプト</b></h1>
+<p>このウェブサイトを作った理由。誰もが今すぐプレイすべき、大ヒットインディーゲーム『<a href="https://store.steampowered.com/app/1677310/In_Stars_And_Time/">イン・スターズ・アンド・タイム</a>』の完全版スクリプトを作成しようと試みる。</p>
+<p>使用されているすべての（ほとんどの）画像はゲーム ファイルから取得され、素晴らしい <a href="https://instarsandtime.wiki.gg"><abbr title="In Stars and Time">ISAT</abbr>wiki</a> でホストされています！</p>
+<p><b>注：</b>このサイトは元々英語です。この日本語版はゲームのオリジナルの日本語翻訳を掲載するために存在しますが、私は日本語があまり得意ではないので、ゲーム以外のテキストはすべて Google 翻訳とインターネットの他の部分を組み合わせて翻訳されています。おかしな言い回しがあったらごめんなさい！</p>
 
-<h2>Index</h2>
+<h2>索引</h2>
 
 <ul>
-    <li><a href="/overview/acts.html">Story</a> (Events specifically tied to story progression)</li>
-    <li><a href="/overview/events.html">Events</a> (Events that only occur once/under special circumstances, e.g. Ghosts event, as well as sidequests)</li>
-    <li><a href="/overview/rooms.html">Rooms</a> (Things tied to specific locations that can generally be repeated at will)</li>
-    <li><a href="/overview/random">Random</a> (Whatever: Items, dialogue repeated across rooms)</li>
-    <li><a href="/overview/sasasap.html">START AGAIN</a> (Pages related to START AGAIN: a prologue)</li>
-    <li><a href="/thanks">Special Thanks</a> (The cool people who made this possible!)</li>
+    <li><a href="/overview/acts.html">ストーリー</a> (ストーリーの進行に特に関係するイベント)</li>
+    <li><a href="/overview/events.html">イベント</a> (一度だけ/特別な状況でのみ発生するイベント。ゴーストイベントやサイドクエストなど。)</li>
+    <li><a href="/overview/rooms.html">部屋</a> (特定の場所に結びついており、通常は自由に繰り返すことができるもの)</li>
+    <li><a href="/overview/random">他</a> (その他: アイテム、部屋間で繰り返される会話)</li>
+    <li><a href="/overview/sasasap.html">スタートアゲイン</a> (『スタートアゲイン：prologue』に関連するページ)</li>
+    <li><a href="/thanks">スペシャルサンクス</a> (これを可能にしてくださった素晴らしい人々！)</li>
 </ul>
 
 <hr>
